移植了拟态板的功能。
- 物品模型显示透明待修复