@@ -2,10 +2,12 @@ package ic2.forge.model;
 
 import com.mojang.blaze3d.platform.NativeImage;
 import ic2.core.item.tool.ItemObscurator;
-import ic2.core.util.StackUtil;
 
 import java.io.IOException;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.BitSet;
+import java.util.Collections;
+import java.util.List;
 import java.util.function.Function;
 
 import net.minecraft.client.Minecraft;
@@ -13,7 +15,6 @@ import net.minecraft.client.renderer.LightTexture;
 import net.minecraft.client.renderer.RenderType;
 import net.minecraft.client.renderer.block.model.BakedQuad;
 import net.minecraft.client.renderer.block.model.ItemOverrides;
-import net.minecraft.client.renderer.texture.SpriteContents;
 import net.minecraft.client.renderer.texture.TextureAtlas;
 import net.minecraft.client.renderer.texture.TextureAtlasSprite;
 import net.minecraft.client.resources.model.BakedModel;
@@ -23,7 +24,6 @@ import net.minecraft.client.resources.model.ModelState;
 import net.minecraft.core.Direction;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.resources.ResourceLocation;
-import net.minecraft.server.packs.resources.Resource;
 import net.minecraft.util.RandomSource;
 import net.minecraft.world.entity.LivingEntity;
 import net.minecraft.world.item.ItemStack;
@@ -33,7 +33,7 @@ import net.minecraftforge.client.model.geometry.IGeometryBakingContext;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-public class MaskOverlayItemModel implements Ic2Model, BakedModel
+public final class MaskOverlayItemModel implements Ic2Model, BakedModel
 {
 	private final ResourceLocation baseModelLocation;
 	private final ResourceLocation maskTextureLocation;
@@ -41,31 +41,48 @@ public class MaskOverlayItemModel implements Ic2Model, BakedModel
 	private final float offset;
 
 	private BakedModel baseModel;
-	private List<BakedQuad> baseQuads;
-	private List<OverlayQuad> overlayTemplates;
-	private float uS, vS, uE, vE;
+	private List<BakedQuad> baseQuads = List.of();
+	private List<OverlayQuad> overlayTemplates = List.of();
+	private float uS;
+	private float vS;
+	private float uE;
+	private float vE;
 
 	private final ItemOverrides itemOverrides = new ItemOverrides()
 	{
 		@Override
-		public BakedModel resolve(@NotNull BakedModel originalModel, @NotNull ItemStack stack, @Nullable net.minecraft.client.multiplayer.ClientLevel level, @Nullable LivingEntity entity, int seed)
+		public BakedModel resolve(
+			@NotNull BakedModel originalModel,
+			@NotNull ItemStack stack,
+			@Nullable net.minecraft.client.multiplayer.ClientLevel level,
+			@Nullable LivingEntity entity,
+			int seed
+		)
 		{
-			CompoundTag nbt = StackUtil.getOrCreateNbtData(stack);
+			CompoundTag nbt = stack.getTag();
+			if (nbt == null)
+			{
+				return MaskOverlayItemModel.this.baseModel;
+			}
+
 			BlockState state = ItemObscurator.getState(nbt);
 			Direction side = ItemObscurator.getSide(nbt);
 			int[] colorMultipliers = ItemObscurator.getColorMultipliers(nbt);
-
-			if (state != null && side != null && colorMultipliers != null)
+			if (state == null || side == null || colorMultipliers == null)
 			{
-				ItemObscurator.ObscuredRenderInfo renderInfo = ItemObscurator.getRenderInfo(state, side);
-				if (renderInfo != null && colorMultipliers.length * 4 == renderInfo.uvs.length)
-				{
-					List<BakedQuad> overlayQuads = buildOverlayQuads(renderInfo, colorMultipliers);
-					return new OverlaidModel(baseModel, baseQuads, overlayQuads);
-				}
+				return MaskOverlayItemModel.this.baseModel;
 			}
 
-			return baseModel;
+			ItemObscurator.ObscuredRenderInfo renderInfo = ItemObscurator.getRenderInfo(state, side);
+			if (renderInfo == null
+				|| colorMultipliers.length * 4 != renderInfo.uvs.length
+				|| MaskOverlayItemModel.this.overlayTemplates.isEmpty())
+			{
+				return MaskOverlayItemModel.this.baseModel;
+			}
+
+			List<BakedQuad> overlayQuads = MaskOverlayItemModel.this.buildOverlayQuads(renderInfo, colorMultipliers);
+			return new OverlaidModel(MaskOverlayItemModel.this.baseModel, MaskOverlayItemModel.this.getDefaultQuads(), overlayQuads);
 		}
 	};
 
@@ -82,17 +99,28 @@ public class MaskOverlayItemModel implements Ic2Model, BakedModel
 		return ResourceLocation.fromNamespaceAndPath(maskLocation.getNamespace(), "textures/" + maskLocation.getPath() + ".png");
 	}
 
+	private List<BakedQuad> getDefaultQuads()
+	{
+		if (!this.baseQuads.isEmpty())
+		{
+			return this.baseQuads;
+		}
+
+		if (this.baseModel == null)
+		{
+			return List.of();
+		}
+
+		RandomSource rand = RandomSource.create(42L);
+		return this.baseModel.getQuads(null, null, rand, ModelData.EMPTY, null);
+	}
+
 	private static BakedQuad remapQuad(BakedQuad template, TextureAtlasSprite sprite, float uS, float vS, float uE, float vE, int colorMul)
 	{
 		int[] oldData = template.getVertices();
 		int[] newData = oldData.clone();
 		int stride = oldData.length >>> 2;
 
-		// Update UVs: vertices in template are ordered as triangle strip:
-		// v0: (xS, yS) bottom-left  → UV (uS, vS)
-		// v1: (xE, yS) bottom-right → UV (uE, vS)
-		// v2: (xE, yE) top-right    → UV (uE, vE)
-		// v3: (xS, yE) top-left     → UV (uS, vE)
 		newData[4] = Float.floatToRawIntBits(uS);
 		newData[5] = Float.floatToRawIntBits(vS);
 		newData[stride + 4] = Float.floatToRawIntBits(uE);
@@ -102,7 +130,6 @@ public class MaskOverlayItemModel implements Ic2Model, BakedModel
 		newData[3 * stride + 4] = Float.floatToRawIntBits(uS);
 		newData[3 * stride + 5] = Float.floatToRawIntBits(vE);
 
-		// Apply color multiplier
 		if (colorMul != -1)
 		{
 			float r = ((colorMul >>> 16) & 0xFF) / 255f;
@@ -126,11 +153,10 @@ public class MaskOverlayItemModel implements Ic2Model, BakedModel
 
 	private static BakedQuad createQuad(float xS, float yS, float xE, float yE, float z, Direction face, TextureAtlasSprite sprite)
 	{
-		int[] data = new int[32]; // 4 vertices × 8 stride
+		int[] data = new int[32];
 		int normal = computeNormal(face);
 		int color = 0xFFFFFFFF;
 
-		// Vertex 0: bottom-left
 		data[0] = Float.floatToRawIntBits(xS);
 		data[1] = Float.floatToRawIntBits(yS);
 		data[2] = Float.floatToRawIntBits(z);
@@ -140,7 +166,6 @@ public class MaskOverlayItemModel implements Ic2Model, BakedModel
 		data[6] = LightTexture.FULL_BRIGHT;
 		data[7] = normal;
 
-		// Vertex 1: bottom-right
 		data[8] = Float.floatToRawIntBits(xE);
 		data[9] = Float.floatToRawIntBits(yS);
 		data[10] = Float.floatToRawIntBits(z);
@@ -150,7 +175,6 @@ public class MaskOverlayItemModel implements Ic2Model, BakedModel
 		data[14] = LightTexture.FULL_BRIGHT;
 		data[15] = normal;
 
-		// Vertex 2: top-right
 		data[16] = Float.floatToRawIntBits(xE);
 		data[17] = Float.floatToRawIntBits(yE);
 		data[18] = Float.floatToRawIntBits(z);
@@ -160,7 +184,6 @@ public class MaskOverlayItemModel implements Ic2Model, BakedModel
 		data[22] = LightTexture.FULL_BRIGHT;
 		data[23] = normal;
 
-		// Vertex 3: top-left
 		data[24] = Float.floatToRawIntBits(xS);
 		data[25] = Float.floatToRawIntBits(yE);
 		data[26] = Float.floatToRawIntBits(z);
@@ -240,13 +263,14 @@ public class MaskOverlayItemModel implements Ic2Model, BakedModel
 		}
 
 		RandomSource rand = RandomSource.create(42L);
-		this.baseQuads = this.baseModel.getQuads(null, null, rand, ModelData.EMPTY, null);
+		List<BakedQuad> quads = this.baseModel.getQuads(null, null, rand, ModelData.EMPTY, null);
+		this.baseQuads = quads.isEmpty() ? List.of() : List.copyOf(quads);
 
 		TextureAtlasSprite maskSprite = spriteGetter.apply(new Material(TextureAtlas.LOCATION_BLOCKS, this.maskTextureLocation));
 		try
 		{
 			ResourceLocation maskResLoc = maskToResource(this.maskTextureLocation);
-			NativeImage maskImage = NativeImage.read(Minecraft.getInstance().getResourceManager().getResource(maskResLoc).get().open());
+			NativeImage maskImage = NativeImage.read(Minecraft.getInstance().getResourceManager().getResource(maskResLoc).orElseThrow().open());
 
 			int width = maskImage.getWidth();
 			int height = maskImage.getHeight();
@@ -255,11 +279,9 @@ public class MaskOverlayItemModel implements Ic2Model, BakedModel
 
 			float texWidth = maskSprite.contents().width() / 16f;
 			float texHeight = maskSprite.contents().height() / 16f;
-
 			float zF = (7.5f - this.offset) / 16f;
 			float zB = (8.5f + this.offset) / 16f;
-
-			this.overlayTemplates = new ArrayList<>(areas.size());
+			List<OverlayQuad> templates = new ArrayList<>(areas.size());
 
 			for (Area area : areas)
 			{
@@ -267,12 +289,12 @@ public class MaskOverlayItemModel implements Ic2Model, BakedModel
 				float yS = 1f - area.y / (float) height * texHeight;
 				float xE = (area.x + area.width) / (float) width * texWidth;
 				float yE = 1f - (area.y + area.height) / (float) height * texHeight;
-
 				BakedQuad frontQuad = createQuad(xS, yS, xE, yE, zF, Direction.SOUTH, maskSprite);
 				BakedQuad backQuad = createQuad(xS, yS, xE, yE, zB, Direction.NORTH, maskSprite);
-				this.overlayTemplates.add(new OverlayQuad(frontQuad, backQuad, xS, yS, xE, yE));
+				templates.add(new OverlayQuad(frontQuad, backQuad));
 			}
 
+			this.overlayTemplates = templates;
 			if (this.scaleOverlay)
 			{
 				calcOverlayBounds(areas, width, height, texWidth, texHeight);
@@ -283,7 +305,7 @@ public class MaskOverlayItemModel implements Ic2Model, BakedModel
 			}
 		} catch (IOException e)
 		{
-			this.overlayTemplates = Collections.emptyList();
+			this.overlayTemplates = List.of();
 			this.uS = this.vS = 0f;
 			this.uE = this.vE = 1f;
 		}
@@ -292,15 +314,15 @@ public class MaskOverlayItemModel implements Ic2Model, BakedModel
 	}
 
 	@Override
-	public @NotNull List<BakedQuad> getQuads(@Nullable BlockState state, @Nullable Direction side, @NotNull RandomSource random, @NotNull ModelData extraData, @Nullable net.minecraft.client.renderer.RenderType renderType)
+	public @NotNull List<BakedQuad> getQuads(@Nullable BlockState state, @Nullable Direction side, @NotNull RandomSource random, @NotNull ModelData extraData, @Nullable RenderType renderType)
 	{
-		return this.baseQuads;
+		return this.getDefaultQuads();
 	}
 
 	@Override
 	public @NotNull List<BakedQuad> getQuads(@Nullable BlockState state, @Nullable Direction side, @NotNull RandomSource random)
 	{
-		return this.baseQuads;
+		return this.getDefaultQuads();
 	}
 
 	@Override
@@ -341,28 +363,30 @@ public class MaskOverlayItemModel implements Ic2Model, BakedModel
 
 	private List<BakedQuad> buildOverlayQuads(ItemObscurator.ObscuredRenderInfo renderInfo, int[] colorMultipliers)
 	{
+		int textureCount = renderInfo.uvs.length / 4;
 		List<BakedQuad> result = new ArrayList<>(this.overlayTemplates.size() * 2);
 
 		for (int qi = 0; qi < this.overlayTemplates.size(); qi++)
 		{
 			OverlayQuad template = this.overlayTemplates.get(qi);
-
-			int ti = qi % renderInfo.tints.length;
+			int ti = qi % textureCount;
 			TextureAtlasSprite sprite = renderInfo.sprites[ti];
 			int colorMul = colorMultipliers[ti];
 
-			float quS = renderInfo.uvs[qi * 4];
-			float qvS = renderInfo.uvs[qi * 4 + 1];
-			float quE = renderInfo.uvs[qi * 4 + 2];
-			float qvE = renderInfo.uvs[qi * 4 + 3];
+			float quS = renderInfo.uvs[ti * 4];
+			float qvS = renderInfo.uvs[ti * 4 + 1];
+			float quE = renderInfo.uvs[ti * 4 + 2];
+			float qvE = renderInfo.uvs[ti * 4 + 3];
 
-			float mappedUS = uS + (quS - sprite.getU0()) / (sprite.getU1() - sprite.getU0()) * (uE - uS);
-			float mappedVS = vS + (qvS - sprite.getV0()) / (sprite.getV1() - sprite.getV0()) * (vE - vS);
-			float mappedUE = uS + (quE - sprite.getU0()) / (sprite.getU1() - sprite.getU0()) * (uE - uS);
-			float mappedVE = vS + (qvE - sprite.getV0()) / (sprite.getV1() - sprite.getV0()) * (vE - vS);
+			float spriteURange = sprite.getU1() - sprite.getU0();
+			float spriteVRange = sprite.getV1() - sprite.getV0();
+			float mappedUS = this.uS + (spriteURange != 0.0f ? (quS - sprite.getU0()) / spriteURange : 0.0f) * (this.uE - this.uS);
+			float mappedVS = this.vS + (spriteVRange != 0.0f ? (qvS - sprite.getV0()) / spriteVRange : 0.0f) * (this.vE - this.vS);
+			float mappedUE = this.uS + (spriteURange != 0.0f ? (quE - sprite.getU0()) / spriteURange : 0.0f) * (this.uE - this.uS);
+			float mappedVE = this.vS + (spriteVRange != 0.0f ? (qvE - sprite.getV0()) / spriteVRange : 0.0f) * (this.vE - this.vS);
 
-			result.add(remapQuad(template.frontQuad, sprite, mappedUS, mappedVS, mappedUE, mappedVE, colorMul));
-			result.add(remapQuad(template.backQuad, sprite, mappedUS, mappedVS, mappedUE, mappedVE, colorMul));
+			result.add(remapQuad(template.frontQuad(), sprite, mappedUS, mappedVS, mappedUE, mappedVE, colorMul));
+			result.add(remapQuad(template.backQuad(), sprite, mappedUS, mappedVS, mappedUE, mappedVE, colorMul));
 		}
 
 		return result;
@@ -390,67 +414,72 @@ public class MaskOverlayItemModel implements Ic2Model, BakedModel
 	}
 
 	private record Area(int x, int y, int width, int height)
+	{
+	}
+
+	private record OverlayQuad(BakedQuad frontQuad, BakedQuad backQuad)
+	{
+	}
+
+	private record OverlaidModel(BakedModel baseModel, List<BakedQuad> baseQuads, List<BakedQuad> overlayQuads) implements BakedModel
+	{
+		@Override
+		public @NotNull List<BakedQuad> getQuads(@Nullable BlockState state, @Nullable Direction side, @NotNull RandomSource random, @NotNull ModelData extraData, @Nullable RenderType renderType)
 		{
+			if (side != null)
+			{
+				return Collections.emptyList();
+			}
+
+			List<BakedQuad> resolvedBaseQuads = this.baseQuads.isEmpty()
+				? this.baseModel.getQuads(state, side, random, extraData, renderType)
+				: this.baseQuads;
+			List<BakedQuad> combined = new ArrayList<>(resolvedBaseQuads.size() + this.overlayQuads.size());
+			combined.addAll(resolvedBaseQuads);
+			combined.addAll(this.overlayQuads);
+			return combined;
 		}
 
-	private record OverlayQuad(BakedQuad frontQuad, BakedQuad backQuad, float xS, float yS, float xE, float yE)
+		@Override
+		public @NotNull List<BakedQuad> getQuads(@Nullable BlockState state, @Nullable Direction side, @NotNull RandomSource random)
 		{
+			return this.getQuads(state, side, random, ModelData.EMPTY, null);
 		}
 
-	private record OverlaidModel(BakedModel baseModel, List<BakedQuad> baseQuads,
-	                             List<BakedQuad> overlayQuads) implements BakedModel
+		@Override
+		public boolean useAmbientOcclusion()
 		{
-
-			@Override
-			public @NotNull List<BakedQuad> getQuads(@Nullable BlockState state, @Nullable Direction side, @NotNull RandomSource random, ModelData extraData, @Nullable RenderType renderType)
-			{
-				if (side != null) return this.baseQuads;
-				List<BakedQuad> combined = new ArrayList<>(this.baseQuads.size() + this.overlayQuads.size());
-				combined.addAll(this.baseQuads);
-				combined.addAll(this.overlayQuads);
-				return combined;
-			}
-	
-			@Override
-			public @NotNull List<BakedQuad> getQuads(@Nullable BlockState state, @Nullable Direction side, @NotNull RandomSource random)
-			{
-				return this.getQuads(state, side, random, ModelData.EMPTY, null);
-			}
-	
-			@Override
-			public boolean useAmbientOcclusion()
-			{
-				return this.baseModel.useAmbientOcclusion();
-			}
-	
-			@Override
-			public boolean isGui3d()
-			{
-				return this.baseModel.isGui3d();
-			}
-	
-			@Override
-			public boolean usesBlockLight()
-			{
-				return this.baseModel.usesBlockLight();
-			}
-	
-			@Override
-			public boolean isCustomRenderer()
-			{
-				return false;
-			}
-	
-			@Override
-			public @NotNull TextureAtlasSprite getParticleIcon()
-			{
-				return this.baseModel.getParticleIcon();
-			}
-	
-			@Override
-			public @NotNull ItemOverrides getOverrides()
-			{
-				return ItemOverrides.EMPTY;
-			}
+			return this.baseModel.useAmbientOcclusion();
 		}
+
+		@Override
+		public boolean isGui3d()
+		{
+			return this.baseModel.isGui3d();
+		}
+
+		@Override
+		public boolean usesBlockLight()
+		{
+			return this.baseModel.usesBlockLight();
+		}
+
+		@Override
+		public boolean isCustomRenderer()
+		{
+			return false;
+		}
+
+		@Override
+		public @NotNull TextureAtlasSprite getParticleIcon()
+		{
+			return this.baseModel.getParticleIcon();
+		}
+
+		@Override
+		public @NotNull ItemOverrides getOverrides()
+		{
+			return ItemOverrides.EMPTY;
+		}
+	}
 }
